# fastapi-cookiecutter

./: README.md  cookiecutter.json  main.py
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/src/: config.py  version.py
{{cookiecutter.project_slug}}/src/controllers/: auth.py  health.py
{{cookiecutter.project_slug}}/src/database/: client.py
{{cookiecutter.project_slug}}/src/dependencies/: auth.py  database.py  http_client.py
{{cookiecutter.project_slug}}/src/entities/: user.py
{{cookiecutter.project_slug}}/src/exceptions/: auth.py  base.py  exception_registration.py  jwt_token.py
{{cookiecutter.project_slug}}/src/helper/: generator.py  jwt_token.py  logger.py  password.py  response.py
{{cookiecutter.project_slug}}/src/middleware/: asgi_logging.py
{{cookiecutter.project_slug}}/src/models/: user.py
{{cookiecutter.project_slug}}/src/repositories/: interface.py  user.py
{{cookiecutter.project_slug}}/src/schemas/: auth.py  health.py
{{cookiecutter.project_slug}}/src/services/: auth.py
{{cookiecutter.project_slug}}/test/: conftest.py  test_health.py
